<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layoutDirection="rtl"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="123dp"
        android:layout_height="71dp"
        android:layout_marginTop="43dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_icon"
        android:contentDescription="@string/app_logo" />

    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appIcon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userName_label"
                android:textColor="@color/loginScreen_textColor"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:backgroundTint="@color/purple"
                app:errorEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/usernameTextFiled"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textDirection="rtl" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userPassword_label"
                android:textColor="@color/loginScreen_textColor"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:backgroundTint="@color/purple"
                app:errorEnabled="true"
                android:textDirection="rtl"
                app:passwordToggleEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/passwordTextFiled"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textAlignment="textEnd" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="240dp"
                android:layout_height="64dp"
                android:background="@drawable/login_button"
                android:foreground="?selectableItemBackground"
                android:text="@string/loginButton_text"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <View
                android:id="@+id/loginButtonShadow"
                android:layout_width="240dp"
                android:layout_height="64dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/nav_login_button_lower_layer" />
        </FrameLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
